# jnoj

./: .gitignore  CHANGELOG.md  README.md  app_makefile  composer.json  data.sql  docker-compose.yaml  go.mod  go.sum  socket.php  yii
assets/: AppAsset.php
backend/: .gitignore  README.md
backend/dispatcher/: Makefile  Makefile.in  config.h  config.h.in  config.ini  config.status  configure  configure.ac
backend/dispatcher/include/: ini.hpp
backend/dispatcher/include/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  memorybuffer.h  rapidjson.h  writer.h
backend/dispatcher/include/rapidjson/error/: error.h
backend/dispatcher/include/rapidjson/internal/: biginteger.h  diyfp.h  ieee754.h  pow10.h  stack.h  strfunc.h  strtod.h
backend/dispatcher/include/rapidjson/tests/: bottTest.cpp
backend/dispatcher/src/: Bott.cpp  Bott.h  Config.cpp  Config.h  DatabaseHandler.cpp  DatabaseHandler.h  GlobalHelpers.cpp  GlobalHelpers.h  JudgerThread.cpp  JudgerThread.h  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  SocketHandler.cpp  SocketHandler.h  Submit.cpp  Submit.h  dispatcher  dispatcher.cpp  dispatcher.h
backend/dispatcher/src/.deps/: Bott.Po  Config.Po  DatabaseHandler.Po  GlobalHelpers.Po  JudgerThread.Po  Logger.Po  SocketHandler.Po  Submit.Po  dispatcher.Po
backend/dispatcher/tests/: socketHandlerTest.cpp
backend/judger/: Makefile  config.h  config.h.in  config.ini  config.status  configure  configure.ac
backend/judger/include/rapidjson/: filereadstream.h  filewritestream.h  memorystream.h  pointer.h  prettywriter.h  reader.h  stringbuffer.h
backend/judger/include/rapidjson/error/: en.h
backend/judger/include/rapidjson/internal/: dtoa.h  itoa.h  meta.h
backend/judger/include/rapidjson/msinttypes/: inttypes.h
backend/judger/src/: Bott.cpp  Bott.h  Comparator.cpp  Comparator.h  Config.cpp  Config.h  Exception.h  GlobalHelpers.cpp  GlobalHelpers.h  Interactive.cpp  Interactive.h  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  PConfig.cpp  PConfig.h  Program.cpp  Program.h  SocketHandler.cpp  SocketHandler.h  chaclient.cpp  chaclient.h  judger  program_init.h
backend/judger/src/.deps/: Bott.Po  Comparator.Po  Config.Po  GlobalHelpers.Po  Interactive.Po  Logger.Po  PConfig.Po  Program.Po  SocketHandler.Po  chaclient.Po
backend/vjudge/src/: ACdreamJudger.cpp  AizuJudger.cpp  Bott.cpp  Bott.h  CCJudger.cpp  CCJudger.h  CFGymJudger.h  Config.h  GlobalHelpers.h  HRBUSTJudger.cpp  JudgerFactory.cpp  JudgerInfo.h  Makefile.am  NBUTJudger.h  NJUPTJudger.cpp  PKUJudger.h  SCUJudger.cpp  SGUJudger.cpp  SPOJJudger.h  SYSUJudger.cpp  SYSUJudger.h  SocketHandler.h  UESTCJudger.h  UVAJudger.h  UralJudger.h  VirtualJudger.cpp  ZJUJudger.h  entities.c  hcxselect.cpp  vjudge.cpp
commands/: InstallController.php
components/: AccessRule.php  BaseController.php  Formatter.php  Mailer.php  Setting.php  SystemInfo.php  Uploader.php
config/: console.php  db.php  params.php  test_db.php  web.php
controllers/: ContestController.php  DiscussController.php  GroupController.php  HomeworkController.php  ImageController.php  PrintController.php  ProblemController.php  RatingController.php  SiteController.php  SolutionController.php  UserController.php  WikiController.php
deployments/: .env  Dockerfile  DockerfileSandbox  DockerfileSandbox.release  default.conf  docker-compose.admin.yaml  docker-compose.dependence.yaml  docker-compose.optional.yaml  docker-compose.seaweedfs.yaml  docker-compose.yaml  init.sh  seaweedfs-docker-compose.yaml  seaweedfs-s3.json
docker/: Dockerfile  sources.list
docs/: FAQ.md  autostart.md  development.md  docusaurus.config.js  environment.md  guide.md  install.md  install.sh  package-lock.json  package.json  redocly.yaml  update.md
judge/: config.ini  dispatcher  judge  makefile
libraries/: testlib.h
mail/: emailVerify-html.php  emailVerify-text.php  passwordResetToken-html.php  passwordResetToken-text.php
migrations/: BaseMigration.php  m180401_030422_import_initial_table.php  m180404_135413_insert_basic_data.php  m180608_090156_rating.php  m180929_073954_update_polygon_status.php  m181109_032216_index.php  m181226_104846_fix_contest_announcement.php  m190309_123832_setting.php  m190315_134224_solution_change.php  m190402_104247_group.php  m190519_024551_problem_solution.php  m191226_003957_email.php
models/: ActiveRecord.php  Contest.php  ContestAnnouncement.php  ContestPrint.php  ContestProblem.php  ContestQuery.php  ContestSearch.php  ContestUser.php  Discuss.php  Group.php  GroupQuery.php  GroupSearch.php  GroupUser.php  GroupUserQuery.php  Homework.php  LoginForm.php  PasswordResetRequestForm.php  Problem.php  ProblemQuery.php  ProblemSearch.php  ResendVerificationEmailForm.php  ResetPasswordForm.php  SignupForm.php  Solution.php  SolutionInfo.php  SolutionQuery.php  SolutionSearch.php  User.php  UserProfile.php  UserQuery.php  UserSearch.php  VerifyEmailForm.php
polygon/: 0  config.ini  judge  makefile  polygon
vjudge/: config.ini  configure  configure.ac
vjudge/include/: lexer.h
vjudge/src/: ACdreamJudger.h  AizuJudger.h  CFGymJudger.cpp  CFJudger.cpp  CFJudger.h  Config.cpp  Exception.h  FZUJudger.cpp  FZUJudger.h  GlobalHelpers.cpp  HDUJudger.cpp  HDUJudger.h  HRBUSTJudger.h  HUSTJudger.cpp  HUSTJudger.h  JudgerFactory.h  JudgerInfo.cpp  LOJJudger.cpp  LOJJudger.h  Logger.cpp  Logger.h  Makefile.in  NBUTJudger.cpp  NJUPTJudger.h  OpenJudgeJudger.cpp  OpenJudgeJudger.h  PKUJudger.cpp  SCUJudger.h  SGUJudger.h  SPOJJudger.cpp  SocketHandler.cpp  UESTCJudger.cpp  UVAJudger.cpp  UVALiveJudger.cpp  UVALiveJudger.h  UralJudger.cpp  VirtualJudger.h  WHUHelper.hpp  WHUJudger.cpp  WHUJudger.h  (+3 more)
web/: .env.development  .env.production  .eslintrc.json  .gitignore  .htaccess  Dockerfile  about.php  admin_index.php  composer.json  (+39 more)
(+1349 files in other folders)
