AM_CXXFLAGS = -Wall -O2 -I$(top_srcdir)/include
bin_PROGRAMS = dispatcher
dispatcher_SOURCES = dispatcher.cpp\
                     Bott.cpp\
                     Config.cpp\
                     DatabaseHandler.cpp\
                     GlobalHelpers.cpp\
                     JudgerThread.cpp\
                     Logger.cpp\
                     SocketHandler.cpp\
                     Submit.cpp
