AM_CXXFLAGS = -Wall -O2 -I$(top_srcdir)/include
bin_PROGRAMS = judger
judger_SOURCES = chaclient.cpp\
                 Bott.cpp\
                 Comparator.cpp\
                 Config.cpp\
                 GlobalHelpers.cpp\
                 Interactive.cpp\
                 Logger.cpp\
                 PConfig.cpp\
                 Program.cpp\
                 SocketHandler.cpp
