bin_PROGRAMS = vjudge
vjudge_CXXFLAGS = -Wall -I$(top_srcdir)/include $(DEPENDENCIES_CFLAGS)
vjudge_LDADD = $(DEPENDENCIES_LIBS)
vjudge_SOURCES = vjudge.cpp\
				 ACdreamJudger.cpp\
				 AizuJudger.cpp\
				 Bott.cpp\
				 CCJudger.cpp\
				 CFGymJudger.cpp\
				 CFJudger.cpp\
				 Config.cpp\
				 FZUJudger.cpp\
				 GlobalHelpers.cpp\
				 hcxselect.cpp\
				 HDUJudger.cpp\
				 HRBUSTJudger.cpp\
				 HUSTJudger.cpp\
				 JudgerFactory.cpp\
				 JudgerInfo.cpp\
				 Logger.cpp\
				 LOJJudger.cpp\
				 NBUTJudger.cpp\
				 NJUPTJudger.cpp\
				 OpenJudgeJudger.cpp\
				 PKUJudger.cpp\
				 SCUJudger.cpp\
				 SGUJudger.cpp\
				 SocketHandler.cpp\
				 SPOJJudger.cpp\
				 SYSUJudger.cpp\
				 UESTCJudger.cpp\
				 UralJudger.cpp\
				 UVAJudger.cpp\
				 UVALiveJudger.cpp\
				 VirtualJudger.cpp\
				 WHUJudger.cpp\
				 ZJUJudger.cpp\
				 entities.c
